# karta

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  bacon.toml  findings.md  plan.md
.github/workflows/: ci.yml
.pi/extensions/: karta.ts
benchmarks/: README.md  beam-100k.md
crates/karta-cli/: Cargo.toml
crates/karta-cli/src/: main.rs  mcp.rs  tools.rs
crates/karta-core/: Cargo.toml
crates/karta-core/src/: activate.rs  clock.rs  config.rs  contradiction.rs  error.rs  extract.rs  forget.rs  karta.rs  lib.rs  migrate.rs  note.rs  read.rs  rerank.rs  rules.rs  rules_engine.rs  trace.rs  write.rs
crates/karta-core/src/dream/: engine.rs  mod.rs  types.rs
crates/karta-core/src/extract/: admission.rs  dedup.rs  entity_type.rs  facet.rs  grounding.rs  memory_kind.rs  mod.rs  temporal_slots.rs
crates/karta-core/src/llm/: azure_responses.rs  mock.rs  mock_scripted.rs  mod.rs  openai.rs  prompts.rs  schemas.rs  split.rs  tracing_wrapper.rs  traits.rs
crates/karta-core/src/read/: mod.rs  resolve.rs  resolve_llm.rs  temporal.rs
crates/karta-core/src/store/: lance.rs  mod.rs  sqlite.rs  sqlite_vec.rs  traits.rs
crates/karta-core/tests/: activate_retrieval_invariants.rs  beam_100k.rs  beam_carryforward.rs  beam_conv0_trace.rs  bench_beam.rs  bench_fetch.rs  calibration_loader.rs  clock.rs  dream_mixed_data.rs  dream_no_occurred_regression.rs  dream_note_timestamp.rs  dream_smoke.rs  dream_snapshot.rs  eval.rs  extraction_admission.rs  extraction_dedup.rs  extraction_entity_type.rs  extraction_facet.rs  extraction_failure_modes.rs  extraction_grounding.rs  extraction_memory_kind.rs  extraction_real_llm_dates.rs  extraction_specificity.rs  fetch_memories.rs  foresight_doa.rs  foresight_survival.rs  future_skew.rs  harness_echo_skip.rs  inspect.rs  live_e2e_smoke.rs  locomo.rs  longmem.rs  mock_extraction_shape.rs  narrative_timestamp.rs  note_attributes_schema.rs  occurred_bounds.rs  occurred_extraction.rs  occurred_storage.rs  query_reference_time.rs  real_eval.rs  (+13 more)
crates/karta-server/: Cargo.toml
crates/karta-server/src/: config.rs  db.rs  error.rs  main.rs  mcp.rs  middleware.rs  routes.rs  state.rs
crates/karta-server/src/oauth/: authorize.rs  callback.rs  discovery.rs  mod.rs  register.rs  token.rs
data/: convert_beam.py  convert_locomo.py  convert_longmem.py
data/test/: conftest.py  test_convert_drop_logging.py  test_convert_structure.py
data/test/fixtures/: README.md  confidence_calibration.json  dated_messages.json
docs/: landscape.md  retrieval-plan.md
scripts/: beam-analyze-extract.py  beam-wait.sh  beam-watch.sh
