[workspace]
resolver = "2"
members = [
    "crates/karta-core",
    "crates/karta-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[patch.crates-io]
# 0.1.10-alpha.3 published package is missing sqlite-vec-diskann.c; use local vendored copy
sqlite-vec = { path = "vendor/sqlite-vec" }
